# src/index.ts
@@ -7,6 +7,7 @@ import { createTableUser, userModel } from './database/models/users';
 import { createTableOrder, orderModel } from './database/models/orders';
 import { clientModel, createTableClients } from './database/models/clients';
 import { clientsRoutes } from './routes/clients.routes';
+import { ordersRoutes } from './routes/orders.routes';
 
 createConnectionDataBase(connection);
 createTableUser(userModel);
@@ -19,6 +20,7 @@ app.use(express.json());
 
 app.use('/users', usersRoutes);
 app.use('/clients', clientsRoutes);
+app.use('/orders', ordersRoutes);
 
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
