# src/module/orders/models/Order.ts
@@ -1,6 +1,7 @@
 class Orders {
   order_id: number | undefined;
   user_id: number | undefined;
+  client_id: number | undefined;
   description: string | undefined;
   customerReport: string | undefined;
   diagnosis: string | undefined;
@@ -8,6 +9,8 @@ class Orders {
   serviceValue: number | undefined;
   sparePartsValue: number | undefined;
   status: number | undefined;
+  finisheAt: string | undefined;
+  finished: boolean | undefined;
   finishedAt: string | undefined;
   createdAt: string | undefined;
   UpdatedAt: string | undefined;
